--- a/apps/leads/templates/capture.html
+++ b/apps/leads/templates/capture.html
@@ -11,27 +11,24 @@
     <ul class="messages">
         {% for message in messages %}
         <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-            {% endfor %}
+        {% endfor %}
     </ul>
     {% endif %}
 
     <h1>Capture Lead</h1>
 
-    <form method="POST" action="{% url 'capture_lead' %}">
+    <form method="POST">
         {% csrf_token %}
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br>
-
-        <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone" required><br>
-
-        <label for="interest">Interest:</label>
-        <input type="text" id="interest" name="interest" required><br>
-
-        <button type="submit">Submit</button>
+        {{ form.name.label_tag }}
+        {{ form.name }}
+        {{ form.email.label_tag }}
+        {{ form.email }}
+        {{ form.phone.label_tag }}
+        {{ form.phone }}
+        {{ form.interest.label_tag }}
+        {{ form.interest }}
+        <!-- ... -->
+        <input type="submit" value="Submit" >
     </form>
 </body>
 
